# afs-website

./: .gitignore  app.json  db.sqlite3  pyproject.toml  readme.MD  requirements.txt
.github/workflows/: deploy-heroky.yaml
static/visitor/css/: contact.css  homepage.css  services.css
staticfiles/: staticfiles.json
staticfiles/visitor/css/: detail.css  homepage.9704977c460d.css  main.css
visitor/: admin.py  forms.py  homepage_text.py  models.py  services.py  site_configuration.py  urls.py  views.py
visitor/migrations/: 0001_initial.py  0002_auto_20200707_1054.py  0003_service_siteconfiguration.py  0004_service_display.py  0005_servicedetail.py  0006_aboutus_homepage.py  0007_service_icont.py  0008_auto_20200722_1051.py  0009_auto_20200806_1511.py
visitor/static/visitor/css/: company.css
visitor/templates/: v_base.html
visitor/templates/visitor/: careers.html  company.html  contact-card.html  contact.html  detail.html  homepage.html  services.html  test.html
website/: settings.py  urls.py
