[tool.poetry]
name = "deploy"
version = "0.1.0"
description = "Abhasa Financial Services web app"
authors = ["Yanish <yanish.rambocus@ovo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
asgiref = "3.2.10"
django = "3.1.13"
gunicorn = "20.0.4"
pytz = "2020.1"
whitenoise = "5.1.0"
django-heroku = "0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
