[tool.poetry]
name = "deploy"
version = "0.1.0"
description = "Abhasa Financial Services web app"
authors = ["Yanish <yanish.rambocus@ovo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
django = "4.2.3"
gunicorn = "21.2.0"
pytz = "2020.1"
whitenoise = "5.1.0"
django-heroku = "0.3.1"
asgiref = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
